--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@arcgis/core": "^4.28.10",
     "@esri/calcite-components-react": "^1.12.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.21.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/leaflet": "^1.9.8",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
